[wip] compile RNBridge.cs

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets/SpinCube.cs" />
     <Compile Include="Assets/CubeComm.cs" />
+    <Compile Include="Assets/RNBridge.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
