rename .NET assemblies/namespaces

--- a/Assets/Runtime/Runtime.asmdef
+++ b/Assets/Runtime/Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Azesmway.RNU",
+    "name": "RNUnity",
     "optionalUnityReferences": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
